2012-05-08 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php: updated "debugPrint" from the last
	version of PandoraFMS.
	
	* include/wiki/lionwiki_lib.php: some fixes.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/side_menu.php: fixed the set vars when show the side
	menu into the wiki section. Now show again the edit link.
	
	* include/wiki/lionwiki_lib.php, operation/wiki/wiki.php: cleaned
	source code style.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/integria.css: a lot of small fixes into the css
	code, and cleaned source code style.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* integria_demo.sql: fixed the order of querys because before the
	script tried to insert "trole" data and next "ttask" and there is a
	foreing key between this tables. And cleaned source code style.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: fixed the style of main white box in the install
	step 4 when you have any error that show a huge text.

2012-04-23  Sancho lerena <slerena@artica.es>

	* include/functions_db.php
	operation/contracts/contract_detail.php
	peration/contacts/contact_detail.php: Instead using events to audit
	the user operations, uses Audit_db.

	* general/home.php,
	godmode/setup/newsboard.php: Newsboard now are better rendered (replacing
	\n with <br>. Added a mode to show "always" a news (with date 0000-00-00).

2012-04-20 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/integria_cron.php,
	include/functions_pop3.php: Fixed a problem with encoding creating
	incidents using mails.

2012-04-19  Sancho Lerena <slerena@artica.es>

	* operation/contracts/contract_detail.php: Added hint with date format
	for contract date search.

2012-04-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_detail.php: Fixed a problem with task creation
	and ACLs

2012-04-17 Dario Rodriguez <dario.rodriguez@artica.es>
