@@ -1,5 +1,10 @@
 2012-05-08 Miguel de Dios  <miguel.dedios@artica.es>
 	
+	* operation/side_menu.php, operation/wiki/wiki.php: added a copy of
+	syntax article from the Lionwiki project home.
+
+2012-05-08 Miguel de Dios  <miguel.dedios@artica.es>
+	
 	* include/functions_html.php: updated "debugPrint" from the last
 	version of PandoraFMS.
 	
